Fixed a bug causing horizontal scroll

--- a/src/PHPM/Bundle/Resources/public/css/affectation.less
+++ b/src/PHPM/Bundle/Resources/public/css/affectation.less
@@ -22,7 +22,7 @@ body {
  */
 .menu_calendar {
 	width: 100%;
-	padding: 10px 40px;
+	padding: 10px 0;
 	border-bottom: 1px solid #666;
 	margin: 0 0 20px 0;
 }
